[tool.poetry]
name = "trackc"
version = "0.0.14"
description = "Track view of chromosome conformation and multi-omics data"
authors = ["Zan Yuan <yfinddream@gmail.com>", "Minghong Li <lmh0066@outlook.com>"]
license = "MIT"
readme = "README.rst"
homepage = "http://trackc.readthedocs.io"
repository = "https://github.com/seqyuan/trackc"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
numpy = "^1.26.2"
seaborn = "^0.13.0"
bioframe = "^0.5.1"
cooler = "^0.9.3"
pybigwig = "^0.3.22"
click = "^8.1.7"
colorlog = "^6.8.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.12.0"
flake8-black = "^0.3.6"
isort = "^5.13.2"
flake8-isort = "^6.1.1"
nbqa = "^1.7.1"
pytest-cov = "^4.1.0"
poethepoet = "^0.24.4"

[tool.poetry.group.docs.dependencies]
livereload = "^2.6.3"
sphinx = "^7.2.6"
sphinx-gallery = "^0.15.0"
nbsphinx = "^0.9.3"
ipython = "^8.18.1"
sphinxcontrib-bibtex = "^2.6.1"
sphinx-copybutton = "^0.5.2"
pydata-sphinx-theme = "^0.14.4"

[tool.poetry.scripts]
trackc = 'trackc.scripts.cli:main'

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poe.tasks]

    _clean_docs.script = "shutil:rmtree('docs/_build', ignore_errors=1)"

	[tool.poe.tasks.format]
    help     = "Run all formating tools on the code base"
    sequence = ["format-black", "format-isort"]

	[tool.poe.tasks.format-black]
    help = "Run black on the code base"
    shell  = """
    black .
    nbqa black docs
    """
    interpreter = "bash"

	[tool.poe.tasks.format-isort]
    help = "Run isort on the code base"
    shell  = """
    isort .
    nbqa isort docs
    """
    interpreter = "bash"

	[tool.poe.tasks.test]
    help = "Run unit and feature tests"
    cmd  = "pytest --cov=trackc"

    [tool.poe.tasks.docs]
    help = "Build the docs using Sphinx"
    cmd  = "sphinx-build docs docs/_build"
    deps = ["_clean_docs"]

    [tool.poe.tasks.docs-serve]
    help   = "Serves the docs locally with livereload"
    script = "docs:serve"
    cwd    = "./docs"
    deps   = ["docs"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"