[tool.poetry]
name = "trackc"
version = "0.0.17"
description = ""
authors = ["seqyuan <ahworld07@gmail.com>", "Minghong Li <lmh0066@outlook.com>"]
readme = "README.rst"
homepage = "http://trackc.readthedocs.io"
repository = "https://github.com/seqyuan/trackc"


[tool.poetry.dependencies]
python = ">=3.8.1"
matplotlib = "^3.6.2"
pandas = "^1.5.3"
numpy = "^1.23.5"
seaborn = "^0.12.2"
bioframe = "^0.3.3"
cooler = "^0.9.1"
pybigwig = "^0.3.18"
click = ">=7.1.2"
colorlog = "^6.7.0"
sphinx-gallery = "^0.15.0"

[tool.poetry.group.docs.dependencies]
livereload = "^2.6.3"
sphinx = "^7.1.2"
sphinx-gallery = "^0.15.0"
nbsphinx = "^0.9.3"
ipython = "^7.19.0"
sphinxcontrib-bibtex = "^2.6.1"
sphinx-copybutton = "^0.5.2"
pydata-sphinx-theme = "^0.14.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
flake8-black = "^0.3.6"
isort = "^5.13.2"
flake8-isort = "^6.1.1"
nbqa = "^1.7.1"
pytest-cov = "^4.1.0"
poethepoet = "^0.25.0"

[tool.poetry.scripts]
trackc = 'trackc.scripts.cli:main'

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poe.tasks]

    _clean_docs.script = "shutil:rmtree('docs/_build', ignore_errors=1)"

	[tool.poe.tasks.format]
    help     = "Run all formating tools on the code base"
    sequence = ["format-black", "format-isort"]

	[tool.poe.tasks.format-black]
    help = "Run black on the code base"
    shell  = """
    black .
    nbqa black docs
    """
    interpreter = "bash"

	[tool.poe.tasks.format-isort]
    help = "Run isort on the code base"
    shell  = """
    isort .
    nbqa isort docs
    """
    interpreter = "bash"

	[tool.poe.tasks.test]
    help = "Run unit and feature tests"
    cmd  = "pytest --cov=trackc"

    [tool.poe.tasks.docs]
    help = "Build the docs using Sphinx"
    cmd  = "sphinx-build docs docs/_build"
    deps = ["_clean_docs"]

    [tool.poe.tasks.docs-serve]
    help   = "Serves the docs locally with livereload"
    script = "docs:serve"
    cwd    = "./docs"
    deps   = ["docs"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

